2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/callgraph_container.cpp: Obviously not2(weak_ordering_function)
	  is not a weak_ordering function leading to mysterious segfault
	  during sort.

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opstack.1.in: new file, describe opstack usage
	* doc/oprofile.xml: describe opstack

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: Don't fix symbol offset for symbol definition
	  coming from the original file. A corner case remain broken: symbols
	  definition coming from debug file and belonging to another section
	  than .text are incorrecttly offseted.

2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_sample_file.h: with cg file we need to field is_kernel.
	* daemon/opd_events.c:
	* daemon/opd_events.h:
	* daemon/opd_mangling.c:
	* daemon/liblegacy/opd_sample_files.c: handle cg_to_is_kernel

	* pp/populate.cpp:
	* pp/populate.h:
	* pp/image_errors.cpp:
	* pp/image_errors.h: move this four files to libpp

	* libpp/populate.cpp: we can get empty filename now, ignore them.
	* libpp/image_error.h: remove this file by moving its contents ...
	* libpp/image_errors.h here (this two filenames was confusing)

	* libpp/Makefile.am: update according to files move.

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: Fix find_profile_sample_files(), I was
	  creating to many profile_sample_files. Add a bunch of operator<<.

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp:

	* libpp/filename_spec.h: add cg_filename member
	* libpp/filename_spec.cpp: handle cg_filename, Fix an error in
	  is_dependant(), I'm a bit nervous about this predicate...

	* libpp/locate_images.h:
	* libpp/locate_images.cpp: #include fix

	* libpp/parse_filename.cpp: Fix cg filename handling to not trigger
	  some invalid_filename error with cg filename.

	* libpp/profile.h:
	* libpp/profile.cpp: we can no longer assume we use u32, so use